tests/snapshot/error/source_locations/expression/super_call/construct_varargs.js
class A {
  constructor() {
    throw new Error();
  }
}

class B extends A {
  constructor() {
    super(1, ...[]);
  }
}

new B();