tests/snapshot/error/source_locations/expression/super_call/construct_varargs.exp
Error: 
  ┌ source_locations/expression/super_call/construct_varargs.js:3:11
  |
3 |     throw new Error();
  |           ^
Stack trace:
  at A (source_locations/expression/super_call/construct_varargs.js:3:11)
  at B (source_locations/expression/super_call/construct_varargs.js:9:5)
  at <global> (source_locations/expression/super_call/construct_varargs.js:13:1)